# AshAI

./: .ashai_signal_292dc110bfcf.json  .ashai_signal_9a905a358740.json  .ashai_signal_b71780a71116.json  .ashai_signal_bc7e93d7a294.json  .ashai_signal_e3baacb1e867.json  .ashai_signal_ec3ba9d1b70f.json  .dockerignore  .env.example  .gitignore  CLAUDE_CODE_COST_SAVINGS.md  CLAUDE_CODE_INTEGRATION.md  DEPLOY.md  DOCKER-CONSOLIDATION-REPORT.md  DOCKER_CLAUDE_PLAN.md  Dockerfile  Dockerfile.base  Dockerfile.consolidated-claude-cli  Dockerfile.consolidated-claude-desktop  Dockerfile.consolidated-gateway  Dockerfile.main  Dockerfile.playwright  Dockerfile.vnc-browser  Dockerfile.vnc-claude  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_COMPLETE.md  Makefile  ONBOARDING.md  QUICK_DEPLOY.md  README.md  SETUP.md  SETUP_CLAUDE_AUTH.md  advanced_docker_claude_test.py  anthropic-proxy.py  auth-helper.sh  authenticate-claude.sh  auto-auth.sh  claude-auth-automation.py  claude-auth.json  claude-cli-supervisor.conf  (+48 more)
ashai-tools/: list_agents.py  message_agent.py  report_progress.py  report_to_eve.py  spawn_agent.py
claude-extension/: background.js  content.js  manifest.json  popup.html  popup.js
docs/: API.md  ARCHITECTURE.md  CANCEL_FEATURE.md  CLAUDE_WEB_AUTOMATION.md  DEPLOYMENT.md  ERROR_ANALYSIS.md  SIMPLIFIED_MESSAGING.md  TOOLS.md
examples/: claude_web_demo.py
plugins/claude_code/: __init__.py  tool.py
plugins/computer_use/: __init__.py  tools.py
plugins/system_tools/: tools.py  (+1 more)
scripts/: build-sidecar.sh  setup_claude_web.py
src-tauri/: Cargo.toml  tauri.conf.json
tests/: conftest.py
website/: index.html  style.css
(+138 files in other folders)
